fixed overflow fullimage on ios

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,6 +1,8 @@
 @import './Components/Styles/mixins.sass'
 
 .App
+  width: 100vw
+  overflow-x: hidden
   .App-Burger
     position: absolute
     top: 0
